# disk_manager

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  api.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleaner.rs  commands.rs  hasher.rs  history.rs  lib.rs  main.rs  models.rs  refresh.rs  scanner.rs
src/components/: BigFilesPanel.vue  DuplicatePanel.vue  HistoryPanel.vue  OverviewPanel.vue
