[package]
name = "disk-manager"
version = "1.0.0"
description = "磁盘清理帮手"
authors = ["Taoist"]
edition = "2021"

[lib]
name = "disk_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# 磁盘扫描
walkdir = "2"
rayon = "1"
md-5 = "0.10"
hex = "0.4"
trash = "5"
sysinfo = "0.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
